Projet GL/test/src/test/deca/codegen/valid/created/incr2/div-float-by-int.deca
//1.60000e+00 5.55556e-01

{
    float x;
    int z;
    x = 3.6;
    z = 2;
    print(3.2/2);print(" ");
    print(z/x);
}