Projet GL/test/src/test/deca/codegen/invalid/created/wrongboolean.deca
//Description
//Wrong typecast boolean 
{
    boolean x = 3.5;
}